[project]
name = "troncheck"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "sqlalchemy[asyncio]==2.0.40",
    "uvicorn==0.34.0",
]
