[project]
name = "troncheck"
version = "0.1.0"
description = """
Микросервис для получения информации о кошельках в сети Tron (TRX),
включая баланс, bandwidth и energy, с сохранением истории запросов.
"""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "sqlalchemy[asyncio]==2.0.40",
    "tronpy==0.5.0",
    "uvicorn==0.34.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"